--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,14 @@
 image:
   file: .gitpod.Dockerfile
 
+ports:
+  - port: 6080
+    onOpen: open-preview
+  - port: 35900
+    onOpen: ignore
+  - port: 5900
+    onOpen: ignore
+
 tasks:
   - init: make deps
     command: gosh
